--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ To Find Out How To Get There!</p>
 <br>
 <br>
 
-<div style="background-color:black;font-family:courier;font-size;30px;color:white">
+<div style="background-color:dimgray;font-family:courier;font-size;30px;color:white">
 <br>
 <br>
 <br>
